--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "jshint-stylish": "^0.1.5",
     "grunt-ngmin": "0.0.3",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-karma": "^0.8.2",
+    "karma": "^0.12.3",
+    "phantomjs": "^1.9.7-3",
+    "karma-phantomjs-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5"
   }
 }
