--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "karma": "^0.12.3",
     "phantomjs": "^1.9.7-3",
     "karma-phantomjs-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "grunt-bump": "0.0.13"
   }
 }
