--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "phantomjs": "^1.9.7-3",
     "karma-phantomjs-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
-    "grunt-bump": "0.0.13"
+    "grunt-bump": "0.0.13",
+    "karma-spec-reporter": "0.0.12"
   }
 }
