Added 'emit' method, improved variable names, removed unused method 'filter', updated JSDocs, added unit tests to the new method

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "pubsub"
   ],
   "authors": [
-    "Dave Gramlich <callmehiphop@gmail.com>"
+    "Dave Gramlich <callmehiphop@gmail.com>",
+    "Maurycy Zarzycki <maurycy.zarzycki@mauft.com> (http://retrocade.net)"
   ],
   "repository": {
     "type": "git",
